🐛 HeaderButton vertical alignment fix

--- a/theme/themes/educal/extras/custom/header.less
+++ b/theme/themes/educal/extras/custom/header.less
@@ -89,6 +89,7 @@
 
 .headerButton {
   margin-left: 20px;
+  display: flex;
 }
 
 // Hiding breadcrumbs from the App first level component
